--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -5,7 +5,8 @@
     align-items: center;
     justify-content: center;
     background-color: $color-grey-light;
-    padding: 3rem 0;
+    text-align: center;
+    padding: 3rem 2rem;
 
     h1 {
       display: flex;
