--- a/src/sass/layout/_contact.scss
+++ b/src/sass/layout/_contact.scss
@@ -77,7 +77,7 @@
     padding: 4rem 0;
 
     h1 {
-      font-size: 2.4rem;
+      font-size: 2rem;
       color: #fff;
       margin-bottom: 1rem;
     }
@@ -92,7 +92,7 @@
     padding-bottom: 2rem;
 
     h2 {
-      font-size: 1.8rem;
+      font-size: 1.5rem;
     }
 
     a {
